--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Sahil Wadhwa
-subtitle: Welcome to a small world of my life
+subtitle: Hello, World!
 use-site-title: true
 ---
 
