--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Sahil Wadhwa
-subtitle: Hello, World!
+subtitle: Expected Value of a human distribution!
 use-site-title: true
 ---
 
