Add Capital One Information

--- a/index.html
+++ b/index.html
@@ -288,8 +288,20 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Data Science Manager <span style="float: right; font-size: smaller; font-style: italic; font-weight: normal;">AI Foundations</span></h4>
+              <h5>July ’24 - Present</h5>
+              <p><em>Capital One</em></p>
+              <ul>
+                <li>AI Safety – Led the development and fine-tuning of Large Language Models (LLMs) using Chain-of-Thought (CoT) reasoning techniques to establish robust guardrails for both input and output. 
+                  This initiative safeguarded company-wide chatbot systems from producing or responding to inappropriate, harmful, or malicious content, 
+                  enhancing the ethical standards and user safety in AI-driven interactions.</li>
+                <li>Red-Teaming – Conducted comprehensive red-teaming exercises on LLMs, employing advanced techniques such as Tree of Attacks with Pruning, Crescendo, and Encoding attacks to test and expose vulnerabilities systematically. 
+                  These rigorous evaluations helped identify potential weaknesses in the models' responses, contributing to improved security measures and the overall resilience of AI systems.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Data Scientist <span style="float: right; font-size: smaller; font-style: italic; font-weight: normal;">Enterprise Intelligence</span></h4>
-              <h5>Jan ’23 - Present</h5>
+              <h5>Jan ’23 - July '24</h5>
               <p><em>Home Depot</em></p>
               <ul>
                 <li>Creating conversational AI solutions for <b>Interactive Voice Response (IVR)</b> and <b>Messaging</b> systems within Home
