add google scholar icon

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/wadhwasahil" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/wadhwasahil/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://scholar.google.com/citations?user=SYr0yt0AAAAJ&hl=en" class="scholar" target="_blank">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Google_Scholar_logo.svg/1024px-Google_Scholar_logo.svg.png" alt="Google Scholar" style="width:30px; height:30px;">
+          </a>
           <a href="assets/img/resume_sahil_thd.pdf" target="_blank"> <i class="bx bxs-cloud-download"></i></a>
         </a>
         </div>
