--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Experience:</strong> <span>5+ years</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Experience:</strong> <span>6+ years</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(217) 208 6838</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Place:</strong> <span>Los Angeles</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Place:</strong> <span>San Jose</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
